# media-automata

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cheatsheet.md  design.md  docker-compose.yml  pyproject.toml  references.md  tasks.md
.github/workflows/: release.yml
apps/api/: main.py
deploy/: production.md
deploy/systemd/: install_user_units.sh  media-automata-api.service  media-automata-deep-check.service  media-automata-deep-check.timer  media-automata-monitor.service  media-automata-monitor.timer  media-automata-redroid.service  media-automata-worker.service
ops/: .gitattributes
ops/redroid/: README.md  binder-linux.conf  create-container.sh  install-systemd.sh  media-automata-redroid.service  start-redroid.sh
scripts/: install_android_apk.sh  stack.sh  start_redroid.sh
src/media_automata/: __init__.py  api.py  cli.py  config.py  ids.py  instagram_story_actions.py  logging_config.py  media.py  monitoring.py  retry.py  (+8 more)
tests/: test_browser_use_llm.py  test_commands.py  test_config.py  test_content_normalization.py  test_instagram_auth_state.py  test_instagram_crop.py  test_instagram_destinations.py  test_instagram_reels.py  test_media.py  test_monitoring.py  test_normalizer.py  test_orchestrator_media_reference.py  test_orchestrator_resilience.py  test_platform_content_overrides.py  test_playwright_helpers.py  test_profile.py  test_public_refs.py  test_repository.py  test_retry.py  test_scheduling.py  test_schemas.py  test_sqlite_resilience.py  test_state.py  test_storage.py  test_whatsapp_client.py  test_x_auth_state.py
(+13 files in other folders)
